2020.09.24 ver4.0.6 - Bug fix for TSC files auto loading.

2020.09.07 ver4.0.5 - Changed ASIVA's address to https.
                    - Revised https access for allsky cam images.

2020.08.18 ver4.0.4 - Added SWIMS into the FC instruments
	              PA is temporary (N-up = 0 and should be fixed
	              in observations).

2020.01.29 ver4.0.3 - Bug fix for multi-thread operation.
	              Added "return(NULL)" at the end of thread funcs.

2020.01.03 ver4.0.2 - Added Transient Name Server in Addobj search & WWWDB.

2019.12.26 ver4.0.1 - Revised downloading popup messages in FCDB search.
                    - Added g_thread_join() after threads finished.

2019.12.24 ver4.0.0 - Bug fix on target addtion from FCDB to Main Target list.
                    - Added "PM" button in Object LIst to search proper
	              motions of targets.
	            - Added SSL access mode to get All Sky Camera image.
                    - Revised code to set Obs/AllSky Cam parameters.
                    - Revised all multi-thread process into glib based ones.

2019.11.27 ver3.8.6 - Re-Added old PanSTARRS server in StSci (as default).
                      (MAST server is slow and unstable with large FOVs).
                    - Updated GSC catalog v2.3 --> v2.4.1 (for JWST)

2019.11.26 ver3.8.5 - Added UCAC4 for FCDB and MagDB.
                    - Updated PanSTARRS-1 server to the latest MAST server.

2019.11.06 ver3.8.4 - Added Non-Sidereal Check in HSC style OPE files.
                    - Revised to get Gen2 status server address from
                        [1] command line option "-s"
	                [2] environment variable "GEN2_RO_SERVER"
                       (priority [1] > [2])
                    - Reomoved the status server address setup in "~/.hskymon".

2019.11.04 ver3.8.3 - Revised Non-sidereal orbit plot in FC.
 	            - Automatic loading of Non-Sidereal tracking files
	              included in OPE files. NST files must be presented in